# vespera

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  dedup_daily_quotes.tsv  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
dashboard/: app.py  app_v1_backup.py  app_v2.py
docs/: AIRFLOW_REMOVAL_AND_ALLTICK_INTEGRATION.md  A_SHARE_PRODUCTION_SUMMARY.md  BACKTEST_JUNE_13_REPORT.md  BACKTEST_JUNE_13_SUMMARY.md  DASHBOARD_V2_COMPLETION_REPORT.md  DATA_COMPATIBILITY_LAYER_IMPLEMENTATION.md  DATA_SOURCE_MIGRATION.md  DATA_SOURCE_STATUS_REPORT.md  ERROR_FIXES_SUMMARY.md  FINAL_PROJECT_COMPLETION_REPORT.md  FULL_MARKET_ANALYSIS_REPORT.md  IMPLEMENTATION_COMPLETE.md  MARIMO_RESEARCH_LAB_COMPLETION_REPORT.md  MARIMO_RESEARCH_LAB_GUIDE.md  MULTI_DATA_SOURCE_ARCHITECTURE.md  POLARS_MIGRATION_PLAN.md  POLARS_MIGRATION_SUCCESS_REPORT.md  POLARS_PROJECT_JOURNEY.md  POLARS_VS_PANDAS_EVALUATION.md  PROJECT_COMPLETION_SUMMARY.md  QIMING_STAR_STRATEGY_COMPLETION_REPORT.md  README.md  REAL_STOCK_ANALYSIS_REPORT.md  SENTIMENT_MODULE_REMOVAL.md  SIMPLIFIED_ARCHITECTURE.md  TECHNICAL_ARCHITECTURE_EVOLUTION.md  TULIPY_MIGRATION.md  TULIPY_MIGRATION_SUMMARY.md
notebooks/: market_sentiment_analysis.py  qiming_star_strategy_analysis.py  specific_stock_deep_dive.py  strategy_backtest_template.py
scripts/: advanced_market_analysis.py  analyze_real_stock_data.py  backtest_june_13.py  backup_clickhouse.py  benchmark_polars_vs_pandas.py  check_and_fix_capital_flow_daily_table.py  clean_and_import_all_stocks.py  clear_mock_data.py  create_capital_flow_table.py  create_stock_data_files.py  create_update_log_table.py  demo_alltick_data_source.py  demo_marimo_lab.py  demo_multi_data_sources.py  fetch_sample_data.py  full_market_analysis.py  import_a_share_data.py  import_alpha_vantage_data.py  import_production_data.py  import_real_a_share_data.py  import_sample_stocks.py  init_database.py  insert_sample_data.py  inspect_clickhouse_daily_quotes.py  launch_marimo.py  manual_data_update.py  migrate_capital_flow_daily_stock_code_to_ts_code.py  (+29 more)
(+60 files in other folders)
